--- a/bridgehr-client/package.json
+++ b/bridgehr-client/package.json
@@ -10,7 +10,8 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
     "react-scripts": "1.1.4",
-    "react-smoothie": "^0.2.1"
+    "react-smoothie": "^0.2.1",
+    "socket.io-client": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
