--- a/bridgehr-client/package.json
+++ b/bridgehr-client/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.7",
     "fili": "^2.0.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
-    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
     "react-scripts": "1.1.4",
     "react-smoothie": "^0.2.1",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.79.1",
     "socket.io-client": "^2.1.0"
   },
   "scripts": {
