--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-page-visibility": "^2.0.0",
     "react-scripts": "1.1.4",
     "react-smoothie": "^0.2.1",
     "semantic-ui-css": "^2.3.1",
